--- a/src/Components/Favorites/fav.scss
+++ b/src/Components/Favorites/fav.scss
@@ -35,11 +35,10 @@ body {
 
     .card {
       width: 20vw;
-      height: 58vh;
+      height: 68vh;
       border-radius: 20px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       padding: 15px;
       margin-top: 23px;
       margin-bottom: 20px;
@@ -66,7 +65,7 @@ body {
       .talaa {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-evenly;
 
         .idd {
           background-color: beige;
@@ -101,6 +100,22 @@ body {
           border-radius: 20px;
           font-weight: 700;
           font-family: Arial, Helvetica, sans-serif;
+        }
+
+        button{
+          border-radius: 20px;
+          border:none;
+          background-color: beige;
+          height: 5vh;
+          font-weight: 700;
+          font-family: Arial, Helvetica, sans-serif;
+
+          &:hover{
+            cursor: pointer;
+            background-color: red;
+            color:white;
+            transition: 0.2s ease-in-out;
+          }
         }
       }
     }
